Fix horizontal scrollbar on small devices.

--- a/css/style.css
+++ b/css/style.css
@@ -185,6 +185,7 @@ footer{
     padding: 0.5rem;
     align-items: center;
     text-align: center;
+    box-sizing: border-box;
     width: 100%;
     font-size: 0.8rem;
     *{
